ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: IngressResource
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: your-domainName.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springappsvc #service name for the application
            port:
              number: 80
